Update TWITTER_REDIRECT_URI to production URL

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 TWITTER_CLIENT_ID=NkVBMGRkVmcxdFhmVnlPaG94Rkc6MTPjaQ
 TWITTER_CLIENT_SECRET=tYTTzmEnI_KyUeK_A6nETckmrK33Gjobkz7WBGTBhGfaKfjp3D
-TWITTER_REDIRECT_URI=http://localhost:3000/auth/callback
+TWITTER_REDIRECT_URI=https://20minutes-ff14.vercel.app/auth/callback
