CSS修正 - スタッフページのレイアウト修正

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-TWITTER_CLIENT_ID=NkVBMGRkVmcxdFhmVnlPaG94Rkc6MTPjaQ
-TWITTER_CLIENT_SECRET=tYTTzmEnI_KyUeK_A6nETckmrK33Gjobkz7WBGTBhGfaKfjp3D
-TWITTER_REDIRECT_URI=https://20minutes-ff14.vercel.app/auth/callback
+TWITTER_CONSUMER_KEY=1454981893464616963-pD33LsH3k8ASFsigTDTXnlusBdk6Pf
+TWITTER_CONSUMER_SECRET=fcehCFu4Xp8M5bbsK5x6KmDSSwJPuYSYVoPzg4adgeS42
+TWITTER_ACCESS_TOKEN=1454981893464616963-pD33LsH3k8ASFsigTDTXnlusBdk6Pf
+TWITTER_ACCESS_TOKEN_SECRET=fcehCFu4Xp8M5bbsK5x6KmDSSwJPuYSYVoPzg4adgeS42
+CALLBACK_URL=https://20minutes-ff14.vercel.app/auth/twitter/callback
